[package]
name = "engine_refactor_1"
version = "0.1.0"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
edition = "2021"

[dependencies]
env_logger = "0.10"
image = "0.24"
log = "0.4"
pollster = "0.3"
wgpu = "0.17"
winit = "0.28"
imageproc = "0.23"
num = "0.4.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
range = "1.0.0"
chickenwire = "0.1.0"
